<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado_fondo"
    tools:context=".PagoExitoso">

    <Button
        android:id="@+id/btnVolverMenuPrincipal"
        android:layout_width="278dp"
        android:layout_height="85dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="75dp"
        android:backgroundTint="#FF8000"
        android:text="@string/button_volver_menu_principal"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGenerarCarnet"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.45" />

    <ImageButton
        android:id="@+id/btnCerrar3"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close"
        android:src="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgHeader"
        style="@style/logo_style"
        android:layout_marginTop="28dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.27"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGenerarCarnet"
        android:layout_width="278dp"
        android:layout_height="85dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#FF8000"
        android:text="@string/button_impr_carnet"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintWidth_percent="0.45" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        android:fontFamily="@font/muli"
        android:text="@string/payment_success"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.45" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="360dp"
        android:contentDescription="@string/ok_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgHeader"
        app:layout_constraintVertical_bias="0.531"
        app:layout_constraintWidth_percent="0.45"
        app:srcCompat="@drawable/succes_icon" />
</androidx.constraintlayout.widget.ConstraintLayout>