<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado_fondo"
    tools:context=".MainMenu">

    <ImageView
        android:id="@+id/imgHeader"
        android:layout_width="340dp"
        android:layout_height="207dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.32"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAlta"
        android:layout_width="278dp"
        android:layout_height="93dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="396dp"
        android:backgroundTint="#FF8000"
        android:text="@string/button_alta"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.45" />

    <Button
        android:id="@+id/btnVenc"
        android:layout_width="278dp"
        android:layout_height="93dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="296dp"
        android:backgroundTint="#FF8000"
        android:text="@string/button_vencimientos"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.45" />

    <Button
        android:id="@+id/btnPagos"
        android:layout_width="278dp"
        android:layout_height="93dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="192dp"
        android:backgroundTint="#FF8000"
        android:text="@string/button_pagos"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.45" />

    <Button
        android:id="@+id/btnOut"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#FF8000"
        android:text="@string/button_salir"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.45" />

</androidx.constraintlayout.widget.ConstraintLayout>