<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado_fondo"
    tools:context=".MainActivity"
    android:id="@+id/main"
    android:padding="16dp">


    <ImageButton
        android:id="@+id/btnCerrarencontrado"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close"
        android:src="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPagar"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#FF8000"
        android:text="@string/btnPagar"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDnipagar"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.5" />

    <EditText
        android:id="@+id/edtDnipagar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="username"
        android:background="@drawable/edittext_rounded"
        android:hint="@string/dni_pagar"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#CCCCCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDniPagar" />

    <EditText
        android:id="@+id/edtDnipagar2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="username"
        android:background="@drawable/edittext_rounded"
        android:hint="@string/dni_pagar"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#CCCCCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDniPagar" />

    <EditText
        android:id="@+id/edtSurnamepagar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="username"
        android:background="@drawable/edittext_rounded"
        android:hint="@string/surname_pagar"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#CCCCCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSurnamePagar" />

    <TextView
        android:id="@+id/lblSurnamePagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/muli"
        android:text="@string/lbl_surname_buscar"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNamePagar" />

    <EditText
        android:id="@+id/edtNamePagar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="username"
        android:background="@drawable/edittext_rounded"
        android:hint="@string/name_pagar"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#CCCCCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblNamePagar" />

    <TextView
        android:id="@+id/lblNamePagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/muli"
        android:text="@string/lbl_name_buscar"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />

    <TextView
        android:id="@+id/lblDniPagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/muli"
        android:text="@string/lbl_dni_buscar"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSurnamepagar" />

    <TextView
        android:id="@+id/lblDniPagar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/muli"
        android:text="Tipo de cliente"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSurnamepagar" />

    <ImageView
        android:id="@+id/imgAvatar"
        android:layout_width="136dp"
        android:layout_height="142dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/foto_socio"
        android:scaleType="fitCenter"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />


</androidx.constraintlayout.widget.ConstraintLayout>
