<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/degradado_fondo"
android:padding="16dp"
tools:context=".MainActivity">

<ImageButton
    android:id="@+id/btnCerrar"
    android:layout_width="45dp"
    android:layout_height="45dp"
    android:layout_margin="8dp"
    android:background="?attr/selectableItemBackgroundBorderless"
    android:contentDescription="@string/close"
    android:src="@drawable/close"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


<Button
    android:id="@+id/btnBuscar"
    android:layout_width="190dp"
    android:layout_height="60dp"
    android:layout_marginStart="32dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="32dp"
    android:backgroundTint="#FF8000"
    android:text="@string/button_buscar"
    android:textAllCaps="false"
    android:textColor="#000000"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edtUsuario4"
    app:layout_constraintVertical_bias="0.451"
    app:layout_constraintWidth_percent="0.5" />

    <EditText
        android:id="@+id/edtUsuario4"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="username"
        android:background="@drawable/edittext_rounded"
        android:hint="@string/dni_buscar"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#CCCCCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblUsuario4" />

    <TextView
        android:id="@+id/lblUsuario4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli"
        android:text="Buscar Socio por DNI:"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.318" />

    <ImageView
    android:id="@+id/imgLogo"
    android:layout_width="130dp"
    style="@style/logo_style"
    android:contentDescription="@string/logo"
    android:scaleType="centerCrop"
    android:src="@drawable/logo"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHeight_percent="0.27"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>